--- a/articlemanagement/.classpath
+++ b/articlemanagement/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" output="articlemanagements.webinf.classes" path="src"/>
-	<classpathentry kind="src" output="articlemangement.webinf.classes" path="test"/>
+	<classpathentry kind="src" output="articlemanagement.webinf.classes" path="src"/>
+	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="src" output="articlemanagement" path="web"/>
 	<classpathentry kind="src" path="res"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
